# bio-annotator

./: .python-version  Dockerfile  Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml  test.yaml
annotators/: __init__.py  annotator.py
annotators/nirvana/: nirvana.py
annotators/vep/: vep.py
bio_annotator/: server.py
bio_annotator/annotators/: __init__.py  annotator.py
bio_annotator/annotators/nirvana/: nirvana.py
bio_annotator/annotators/vep/: vep.py
bio_annotator/api/: __init__.py
bio_annotator/api/annotation/v1/: controller.py  router.py
bio_annotator/common/: exceptions.py  file_utils.py
bio_annotator/common/bioutils/: chromosome.py
bio_annotator/schemas/: variant.py  variants.py
bio_annotator/schemas/validators/: __init__.py  variant.py
common/: constants.py  exceptions.py  types.py
common/bioutils/: assembly.py  chromosome.py
common/bioutils/iscn/cytobands/: grch_37.py
schemas/: variants.py
schemas/validators/: variant.py
scripts/: test.sh
test/: conftest.py
test/annotators/: test_annotator.py
test/fixtures/: variant.py
test/schemas/: test_variant_schema.py
tests/: conftest.py
tests/annotators/: test_annotator.py  test_nirvana.py  test_vep.py
tests/api/: test_annotation_controller.py  test_annotation_route.py  test_dependencies.py
tests/common/bioutils/: test_assembly.py  test_chromosome.py  test_cytobands.py
tests/fixtures/: env.py  variant.py
tests/schemas/: test_variant_schema.py
tests/schemas/validators/: test_cnv_validators.py  test_snv_validator.py  test_snv_validators.py
(+10 files in other folders)
