[tool.poetry]
name = "bio-annotator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = "0.23.0"
fastapi = "0.89.1"
requests = "2.28.1"
aiofiles = "22.1.0"
gunicorn = "20.1.0"
uvicorn = "*"
python-multipart = "0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
pytest-asyncio = "^0.20.3"
pydantic-factories = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
